<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.valacuz.mylocations.picker.PlacePickerViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            center_location="@{viewModel.centerLatLng}"
            zoom_level="@{viewModel.zoomLevel}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_vertical"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPickerLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_horizontal"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPickerLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_pin"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="false"
            android:contentDescription="@null"
            android:focusable="false"
            android:longClickable="false"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_pin"
            app:layout_constraintBottom_toTopOf="@+id/line_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/current_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:onClick="@{() -> viewModel.moveToCurrentLocation()}"
            android:src="@android:drawable/ic_menu_mylocation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/pick_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintBottom_toTopOf="@+id/current_button"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

    </android.support.constraint.ConstraintLayout>
</layout>
