...
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_name"
            style="@style/place_form_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_name"
            android:inputType="text"
            android:minHeight="@dimen/form_widget_min_height"
            android:text="@={viewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_place" />

        <EditText
            android:id="@+id/text_coordinate"
            style="@style/place_form_text.readonly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_coordinate"
            android:inputType="text"
            android:minHeight="@dimen/form_widget_min_height"
...
